--- a/css/main.css
+++ b/css/main.css
@@ -147,7 +147,6 @@ body{
 }
 .intro-list-item {
     width: 393px;
-    height: 382px;
     background: #F6F6F6;
     border-radius: 15px;
     margin: 10px;
@@ -177,11 +176,13 @@ body{
 .intro-list-under {
     display: flex;
     justify-content: start;
-    align-items: flex-start;
-    margin: -9px 18px;
+    align-items: center;
+    margin: -24px 0px 0px 21px;
+    padding-bottom: 10px;
 }
 .intro-list-under-text {
-    display: contents;
+    display: flex;
+    padding-left: 10px;
 }
 /* .enter {
 } */
@@ -195,6 +196,7 @@ body{
     border-radius: 10px;
 }
 .enter-text {
+    margin: 24px 0px 24px 29px;
     font-weight: 500;
     font-size: 20px;
     line-height: 26px;
@@ -202,6 +204,7 @@ body{
     color: #000000;    
 }
 .enter-link {
+    margin: 25px 71px 25px 0px;
     text-decoration: none;
     width: 149px;
     height: 50px;
@@ -243,15 +246,17 @@ body{
     align-items: center;
     margin: 10px;
 }
-/* .news-case {
-} */
+.news-case {
+    margin-left: 17px;
+} 
 .news-picture {
     width: 210px;
     height: 165px;
     margin: 20px 17px;
 }
-/* .news-shell {
-} */
+.news-shell {
+    margin: 20px 20px 20px 0px;
+} 
 .news-link {
     text-decoration: none;
 }
@@ -272,6 +277,7 @@ body{
 }
 .news-under-text {
     display: flex;
+    align-items: center;
 }
 /* .news-under-text-img {
 } */
